# music-curator

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20251028_0001_create_users.py
src/: main.py
src/core/: config.py  security.py
src/db/: session.py
src/db/models/: user.py
src/repositories/: user_repo.py
src/routers/: health.py  users.py
src/schemas/: user.py
src/services/: user_service.py
