[tool.poetry]
name = "music_curator"
version = "0.1.0"
description = "Playlist generator (Spotify + GPT) with FastAPI"
authors = ["Italo Chagas <italo.chagas@vortigo.com.br>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.4.0"
httpx = "^0.27.0"
psycopg = {version="^3.1.18", extras=["binary"]}
alembic = "^1.13.2"
python-jose = "^3.3.0"
passlib = {version="^1.7.4", extras=["bcrypt"]}
bcrypt = "^4.0.1"
python-dotenv = "^1.0.1"
# Spotify API client (spotipy) ou HTTP puro – começamos com spotipy:
spotipy = "^2.24.0"
# OpenAI
openai = "^1.51.0"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.8"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
types-python-dateutil = "^2.9.0"
types-requests = "^2.32.0.20241016"
commitizen = "^3.28.0"

[tool.black]
line-length = 100
target-version = ["py313", "py314"]

[tool.isort]
profile = "black"
line_length = 100
force_single_line = false
combine_as_imports = true

[tool.ruff]
line-length = 100
target-version = "py313"
extend-select = ["I","UP","SIM","B","C90"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_optional = true
plugins = []

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$major.$minor.$patch"
update_changelog_on_bump = true
